# dtf-tools

./: README.md  dtf-ipython.sh  pyproject.toml  requirements.txt  run-ipython.py  uv.toml
scripts/: manage-deps.sh
