[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtf-tools"
version = "0.0.2"
description = "DTF Tools - Development tools and utilities for the DTF Framework"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "dtf-framework>=0.0.2,<0.1.0",
    "ipython>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
]

[project.urls]
Homepage = "https://github.com/sealablab/dtf-tools"
Repository = "https://github.com/sealablab/dtf-tools.git"
Documentation = "https://github.com/sealablab/dtf-tools#readme"

[tool.hatch.build.targets.wheel]
packages = ["dtf_tools"] 